summarizer changed to t5-small

--- a/templates/main.html
+++ b/templates/main.html
@@ -46,7 +46,7 @@
         }
 
         const formData = new FormData();
-        const url = "/GPT2-arXiv/";
+        const url = "/GPT2-arxiv/";
         let start = 0;
 
         formData.append('text', text);
