--- a/templates/main.html
+++ b/templates/main.html
@@ -134,21 +134,20 @@
                 <label>&nbsp;&nbsp;Convolutional Neural Networks</label><br><br>
                 <h5><label>Text</label></h5>
                 <label>
-                    &nbsp;&nbsp;Convolutional Neural Networks (CNNs) perform many tasks in video analysis and classification. Due to fast convergence, 
-                    some specific variants of the network have been proposed to perform different tasks in this framework. In contrast to standard CNNs, 
-                    they employ a fixed-point kernel to extract informative features. In contrast to CNNs that use the discrete series to make the predictions, 
-                    we introduce the time series kernel with temporal dependence to deal with long-term temporal dependencies in the prediction. The temporal 
-                    dependence in the time series kernels can be computed using iterative filters. The algorithm is based on convolutional neural networks, and 
-                    it has been designed to perform fast and accurate predictions. We demonstrate the advantages of this method in several challenging benchmark 
-                    datasets (PASCAL VOC 2004, DUC 2004, and GUMPC 2005) with various hardware architectures using computer vision and video surveillance data sets. 
-                    Our evaluation shows that our proposed strategy outperforms several state-of-the-art CNNs in the classification and classification tasks on CIFAR-10 
-                    VOC data set for classification, PASCAL VOC, and GUMPC, respectively, showing the efficacy of the proposed approach.
+                    &nbsp;&nbsp;Convolutional Neural Networks (CNN) have been used as a powerful source of image data, 
+                    allowing one to extract information from the image and thereby extract useful properties on a range 
+                    of subjects. In this paper, we present and analyze two CNN architectures for the classification task 
+                    of textured object textured image classification: One uses a set of convolutional layers, which are 
+                    trained with image annotations. The other architecture uses Convolutional Neural Networks (CNN)-based 
+                    convolutional layers, which are trained by CNN layers from the input to the output of the CNN. We evaluate
+                     our two architectures with the help of a novel benchmark dataset consisting of 10,000 textured images, 
+                     composed of 24 languages and 10,500 annotated images per class. According to our experiments, textured 
+                     images are classified into 5 classes (low, intermediate and high).
                 </label>
                 <h5><label>Summary</label></h5>
-                <label>&nbsp;&nbsp; Convolutional Neural Networks (CNNs) perform many tasks in video analysis and classification . 
-                    In contrast to standard CNNs, they employ a fixed-point kernel to extract informative features . We demonstrate 
-                    the advantages of this method in several challenging benchmark datasets (PASCAL VOC 2004, DUC 2004, and GUMPC 2005) 
-                    with various hardware architectures .</label><br><br>
+                <label>&nbsp;&nbsp; two architectures are used to classify textured images. one uses convolutional layers, 
+                    which are trained with image annotations. the other uses convolutional layers, which are trained by CNN 
+                    layers.</label><br><br>
             </div>
 
             <br><hr width="90%">
